--- a/public/styles.css
+++ b/public/styles.css
@@ -3435,9 +3435,9 @@ html:has(.drawer-toggle:checked) {
   line-height: 1;
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-xl {
@@ -3511,6 +3511,11 @@ html:has(.drawer-toggle:checked) {
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
